--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "b-creative",
   "version": "0.0.0",
-  "description": "Frontend project template based on webpack, typescript and scss",
+  "description": "Bornfight frontend project template based on gulp, es6 and scss",
   "homepage": "",
   "author": {
     "name": "Bornfight",
@@ -19,24 +19,24 @@
     "yeoman-generator"
   ],
   "devDependencies": {
-    "yeoman-test": "^1.7.0",
-    "yeoman-assert": "^3.1.0",
-    "eslint": "^5.4.0",
-    "prettier": "^1.11.1",
-    "husky": "^0.14.3",
-    "lint-staged": "^7.2.2",
-    "eslint-config-prettier": "^3.0.1",
-    "eslint-plugin-prettier": "^2.6.0",
-    "eslint-config-xo": "^0.24.2",
-    "jest": "^23.5.0"
+    "yeoman-test": "^2.2.0",
+    "yeoman-assert": "^3.1.1",
+    "eslint": "^6.8.0",
+    "prettier": "^1.19.1",
+    "husky": "^4.2.3",
+    "lint-staged": "^10.0.8",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-config-xo": "^0.29.1",
+    "jest": "^25.1.0"
   },
   "engines": {
-    "npm": ">= 4.0.0"
+    "npm": ">= 6.14.2"
   },
   "dependencies": {
-    "yeoman-generator": "^2.0.1",
-    "chalk": "^2.1.0",
-    "yosay": "^2.0.1"
+    "yeoman-generator": "^4.7.0",
+    "chalk": "^3.0.0",
+    "yosay": "^2.0.2"
   },
   "jest": {
     "testEnvironment": "node"
