--- a/generators/app/templates/common/package.json
+++ b/generators/app/templates/common/package.json
@@ -1,14 +1,17 @@
 {
   "name": "<%= name %>",
-  "version": "0.2.2",
-  "description": "Frontend project template based on webpack, ES6 and SCSS",
+  "version": "0.0.0",
+  "description": "Bornfight frontend project template based on gulp, es6 and scss",
   "author": "Bornfight FE team",
   "email": "frontend@bornfight.com",
   "private": true,
+  "engines": {
+    "node": ">=12.16.1",
+    "npm": ">= 6.14.2"
+  },
   "scripts": {
-    "build": "env NODE_ENV=production webpack --mode production",
-    "build:analyze": "env NODE_ENV=production ANALYZE=true webpack --mode production",
-    "dev": "webpack --mode development --watch",
+    "build": "gulp build",
+    "dev": "gulp",
     "esdoc": "./node_modules/.bin/esdoc",
     "format": "prettier --write \"static/**/*.{scss,js}\"",
     "lint:scss": "stylelint 'static/**/*.scss'"
@@ -22,44 +25,43 @@
     "last 2 versions"
   ],
   "devDependencies": {
-    "@babel/core": "^7.7.7",
-    "@babel/plugin-proposal-class-properties": "^7.7.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.7.7",
-    "@babel/plugin-syntax-dynamic-import": "^7.7.4",
-    "@babel/preset-env": "^7.7.7",
+    "@babel/core": "^7.8.7",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-env": "^7.8.7",
+    "@babel/register": "^7.8.6",
     "@degordian/standards": "^2.0.0",
     "@namics/stylelint-bem": "^6.3.0",
-    "autoprefixer": "^9.7.3",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.6",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
+    "babelify": "^10.0.0",
     "browser-sync": "^2.26.7",
-    "browser-sync-webpack-plugin": "^2.2.2",
-    "core-js": "^3.6.4",
-    "css-loader": "^3.4.1",
+    "browserify": "^16.5.0",
+    "del": "^5.1.0",
     "esdoc": "^1.1.0",
     "esdoc-standard-plugin": "^1.0.0",
     "eslint": "^4.18.0",
-    "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.13.0",
-    "normalize.css": "^8.0.1",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "poly-fluid-sizing": "^1.1.0",
-    "postcss-loader": "^3.0.0",
+    "esm": "^3.2.25",
+    "figlet": "^1.3.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-babel": "^8.0.0",
+    "gulp-clean-css": "^4.2.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-uglify": "^3.0.2",
     "prettier": "^1.19.1",
-    "sass-loader": "^8.0.0",
+    "print-message": "^3.0.1",
     "stylelint": "^12.0.1",
     "stylelint-config-prettier": "^8.0.1",
     "stylelint-prettier": "^1.1.2",
     "stylelint-scss": "^3.13.0",
-    "stylelint-webpack-plugin": "^1.1.2",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^4.41.5",
-    "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "^3.3.10"
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {
-    "gsap": "^3.0.5"
+    "gsap": "^3.0.5",
+    "poly-fluid-sizing": "^1.1.0"
   }
 }
