--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "b-creative",
+  "name": "generator-b-creative",
   "version": "0.0.0",
   "description": "Bornfight frontend project template based on gulp, es6 and scss",
   "homepage": "",
@@ -23,10 +23,12 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-config-xo": "^0.29.1",
     "eslint-plugin-prettier": "^3.1.2",
+    "figlet": "^1.3.0",
     "husky": "^4.2.3",
     "jest": "^25.1.0",
     "lint-staged": "^10.0.8",
     "prettier": "^1.19.1",
+    "print-message": "^3.0.1",
     "yeoman-assert": "^3.1.1",
     "yeoman-test": "^2.2.0"
   },
