--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   ],
   "keywords": [
     "frontend",
-    "webpack",
+    "gulp",
     "es6",
+    "babel",
     "scss",
+    "browsersync",
     "yeoman-generator"
   ],
   "devDependencies": {
@@ -30,7 +32,7 @@
     "prettier": "^1.19.1",
     "print-message": "^3.0.1",
     "yeoman-assert": "^3.1.1",
-    "yeoman-test": "^2.2.0"
+    "yeoman-test": "^2.3.0"
   },
   "engines": {
     "npm": ">= 6.14.2"
