--- a/generators/app/templates/dotfiles/.eslintrc.json
+++ b/generators/app/templates/dotfiles/.eslintrc.json
@@ -1,11 +1,18 @@
 {
-  "parserOptions": {
-    "ecmaVersion": 6,
-    "sourceType": "module"
+  "env": {
+    "browser": true,
+    "commonjs": true,
+    "es6": true,
+    "node": true
   },
   "extends": [
+    "eslint:recommended",
     "plugin:prettier/recommended"
   ],
+  "parserOptions": {
+    "sourceType": "module",
+    "ecmaVersion": 2018
+  },
   "plugins": [
     "prettier"
   ],
