--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "generator-b-creative",
+  "name": "b-creative",
   "version": "0.1.0",
   "description": "Bornfight frontend project template based on gulp, es6 and scss",
   "homepage": "",
@@ -22,14 +22,14 @@
   ],
   "devDependencies": {
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
+    "eslint-config-prettier": "^6.10.1",
     "eslint-config-xo": "^0.29.1",
     "eslint-plugin-prettier": "^3.1.2",
     "figlet": "^1.3.0",
     "husky": "^4.2.3",
     "jest": "^25.1.0",
     "lint-staged": "^10.0.8",
-    "prettier": "^1.19.1",
+    "prettier": "^2.0.1",
     "print-message": "^3.0.1",
     "yeoman-assert": "^3.1.1",
     "yeoman-test": "^2.3.0"
@@ -39,7 +39,7 @@
   },
   "dependencies": {
     "chalk": "^3.0.0",
-    "yeoman-generator": "^4.7.0",
+    "yeoman-generator": "^4.7.2",
     "yosay": "^2.0.2"
   },
   "jest": {
