b-creative - fix generator name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "b-creative",
+  "name": "generator-b-creative",
   "version": "0.1.0",
   "description": "Bornfight frontend project template based on gulp, es6 and scss",
   "homepage": "",
