--- a/generators/app/templates/common/package.json
+++ b/generators/app/templates/common/package.json
@@ -1,36 +1,37 @@
 {
   "name": "<%= name %>",
   "version": "0.0.0",
-  "description": "Bornfight frontend project template based on gulp, es6 and scss",
-  "author": "Bornfight FE team",
-  "email": "frontend@bornfight.com",
   "private": true,
-  "engines": {
-    "node": ">=12.16.1",
-    "npm": ">=6.14.2"
-  },
-  "scripts": {
-    "build": "gulp build",
-    "dev": "gulp",
-    "esdoc": "./node_modules/.bin/esdoc",
-    "format": "prettier --write \"static/**/*.{scss,js}\"",
-    "lint:scss": "stylelint 'static/**/*.scss'"
-  },
+  "description": "Bornfight frontend project template based on gulp, es6 and scss",
   "repository": {
     "type": "git",
     "url": ""
+  },
+  "author": "Bornfight FE team",
+  "scripts": {
+    "build": "gulp build",
+    "build:vendor": "gulp buildVendor",
+    "dev": "gulp",
+    "esdoc": "./node_modules/.bin/esdoc",
+    "format": "prettier --write \"./**/*.{scss,js,json}\"",
+    "lint:scss": "stylelint 'static/**/*.scss'"
   },
   "browserslist": [
     "> 0.5%",
     "last 2 versions"
   ],
+  "dependencies": {
+    "@bornfight/b-reset": "^1.0.4",
+    "gsap": "^3.2.6",
+    "poly-fluid-sizing": "^1.1.0"
+  },
   "devDependencies": {
-    "@babel/core": "^7.9.6",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.9.6",
+    "@babel/core": "^7.10.2",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/plugin-proposal-object-rest-spread": "^7.10.1",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.9.6",
-    "@babel/register": "^7.9.0",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/register": "^7.10.1",
     "@namics/stylelint-bem": "^6.3.1",
     "babelify": "^10.0.0",
     "browser-sync": "^2.26.7",
@@ -38,9 +39,9 @@
     "del": "^5.1.0",
     "esdoc": "^1.1.0",
     "esdoc-standard-plugin": "^1.0.0",
-    "eslint": "^7.0.0",
-    "eslint-config-prettier":"^6.11.0",
-    "eslint-plugin-prettier":"^3.1.3",
+    "eslint": "^7.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
     "esm": "^3.2.25",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
@@ -52,16 +53,17 @@
     "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2",
     "prettier": "^2.0.5",
-    "stylelint": "^13.3.3",
+    "stylelint": "^13.5.0",
     "stylelint-config-prettier": "^8.0.1",
     "stylelint-prettier": "^1.1.2",
     "stylelint-scss": "^3.17.2",
     "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^2.0.0"
+    "vinyl-source-stream": "^2.0.0",
+    "watchify": "^3.11.1"
   },
-  "dependencies": {
-    "@bornfight/b-reset":"^1.0.4",
-    "gsap": "^3.2.6",
-    "poly-fluid-sizing": "^1.1.0"
-  }
+  "engines": {
+    "node": ">=12.16.1",
+    "npm": ">=6.14.2"
+  },
+  "email": "frontend@bornfight.com"
 }
