--- a/generators/app/templates/dotfiles/.stylelintrc
+++ b/generators/app/templates/dotfiles/.stylelintrc
@@ -1,24 +1,45 @@
 {
-  "extends": ["stylelint-prettier/recommended"],
+  "extends": [
+    "stylelint-prettier/recommended"
+  ],
   "plugins": [
     "stylelint-scss",
     "@namics/stylelint-bem"
   ],
   "rules": {
-    "indentation": [4],
+    "indentation": [
+      4
+    ],
     "plugin/stylelint-bem-namics": {
-      "patternPrefixes": [ "c", "o", "u"],
-      "helperPrefixes": [ "is", "has" ]
-    },
-    "selector-pseudo-class-no-unknown": [true, {
-      "ignorePseudoClasses": ["global", "local", "@include"]
-    }],
-    "max-nesting-depth": [2, {
-      "ignore": [
-        "blockless-at-rules",
-        "pseudo-classes"
+      "patternPrefixes": [
+        "c",
+        "o",
+        "u"
+      ],
+      "helperPrefixes": [
+        "is",
+        "has"
       ]
-    }],
+    },
+    "selector-pseudo-class-no-unknown": [
+      true,
+      {
+        "ignorePseudoClasses": [
+          "global",
+          "local",
+          "@include"
+        ]
+      }
+    ],
+    "max-nesting-depth": [
+      2,
+      {
+        "ignore": [
+          "blockless-at-rules",
+          "pseudo-classes"
+        ]
+      }
+    ],
     "max-empty-lines": 1,
     "at-rule-no-unknown": null,
     "no-duplicate-selectors": true,
