--- a/generators/app/templates/common/package.json
+++ b/generators/app/templates/common/package.json
@@ -9,11 +9,11 @@
   },
   "author": "Bornfight FE team",
   "scripts": {
-    "build": "gulp build",
-    "build:vendor": "gulp buildVendor",
-    "dev": "gulp",
+    "build": "NODE_ENV='production' gulp build",
+    "build:vendor": "NODE_ENV='production' gulp buildVendor",
+    "dev": "NODE_ENV='development' gulp",
     "esdoc": "./node_modules/.bin/esdoc",
-    "format": "prettier --write \"./**/*.{scss,js,json}\"",
+    "format": "prettier --write 'static/**/*.{scss,js}'",
     "lint:scss": "stylelint 'static/**/*.scss'"
   },
   "browserslist": [
@@ -48,6 +48,7 @@
     "gulp-babel": "^8.0.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
+    "gulp-if": "^3.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^2.6.5",
