--- a/generators/app/templates/common/package.json
+++ b/generators/app/templates/common/package.json
@@ -14,7 +14,8 @@
     "dev": "NODE_ENV='development' gulp",
     "esdoc": "./node_modules/.bin/esdoc",
     "format": "prettier --write 'static/**/*.{scss,js}'",
-    "lint:scss": "stylelint 'static/**/*.scss'"
+    "lint:scss": "stylelint 'static/**/*.scss'",
+    "webp": "gulp webPImages"
   },
   "browserslist": [
     "> 0.5%",
@@ -22,7 +23,7 @@
   ],
   "dependencies": {
     "@bornfight/b-reset": "^1.0.4",
-    "gsap": "^3.2.6",
+    "gsap": "^3.3.3",
     "poly-fluid-sizing": "^1.1.0"
   },
   "devDependencies": {
@@ -39,9 +40,9 @@
     "del": "^5.1.0",
     "esdoc": "^1.1.0",
     "esdoc-standard-plugin": "^1.0.0",
-    "eslint": "^7.1.0",
+    "eslint": "^7.2.0",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-prettier": "^3.1.4",
     "esm": "^3.2.25",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
@@ -53,8 +54,9 @@
     "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2",
+    "gulp-webp": "^4.0.1",
     "prettier": "^2.0.5",
-    "stylelint": "^13.5.0",
+    "stylelint": "^13.6.0",
     "stylelint-config-prettier": "^8.0.1",
     "stylelint-prettier": "^1.1.2",
     "stylelint-scss": "^3.17.2",
