b-creative - strip from production bundle WIP

--- a/generators/app/templates/common/package.json
+++ b/generators/app/templates/common/package.json
@@ -23,24 +23,25 @@
   ],
   "dependencies": {
     "@bornfight/b-reset": "^1.0.4",
-    "gsap": "^3.3.4",
+    "gsap": "^3.4.1",
     "poly-fluid-sizing": "^1.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.3",
-    "@babel/plugin-proposal-class-properties": "^7.10.1",
-    "@babel/plugin-proposal-object-rest-spread": "^7.10.3",
+    "@babel/core": "^7.10.5",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.10.4",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.10.3",
-    "@babel/register": "^7.10.3",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/register": "^7.10.5",
     "@namics/stylelint-bem": "^6.3.1",
     "babelify": "^10.0.0",
-    "browser-sync": "^2.26.7",
+    "browser-sync": "^2.26.10",
     "browserify": "^16.5.1",
+    "browserify-strip-code": "^1.0.3",
     "del": "^5.1.0",
     "esdoc": "^1.1.0",
     "esdoc-standard-plugin": "^1.0.0",
-    "eslint": "^7.3.1",
+    "eslint": "^7.5.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "esm": "^3.2.25",
