--- a/generators/app/templates/common/package.json
+++ b/generators/app/templates/common/package.json
@@ -17,6 +17,11 @@
     "lint:scss": "stylelint 'static/**/*.scss'",
     "webp": "gulp webPImages"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run format"
+    }
+  },
   "browserslist": [
     "> 0.5%",
     "last 2 versions"
@@ -27,12 +32,12 @@
     "poly-fluid-sizing": "^1.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.12.10",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.12.7",
-    "@babel/register": "^7.12.1",
+    "@babel/preset-env": "^7.12.10",
+    "@babel/register": "^7.12.10",
     "@namics/stylelint-bem": "^6.3.1",
     "babelify": "^10.0.0",
     "browser-sync": "^2.26.13",
@@ -41,9 +46,9 @@
     "del": "^6.0.0",
     "esdoc": "^1.1.0",
     "esdoc-standard-plugin": "^1.0.0",
-    "eslint": "^7.14.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint": "^7.15.0",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-prettier": "^3.2.0",
     "esm": "^3.2.25",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
@@ -56,7 +61,8 @@
     "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.2",
     "gulp-webp": "^4.0.1",
-    "prettier": "^2.2.0",
+    "husky": "^4.3.5",
+    "prettier": "^2.2.1",
     "stylelint": "^13.8.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-prettier": "^1.1.2",
@@ -66,8 +72,8 @@
     "watchify": "^3.11.1"
   },
   "engines": {
-    "node": ">=12.16.1",
-    "npm": ">=6.14.2"
+    "node": ">=12.19.0",
+    "npm": ">=6.14.9"
   },
   "email": "frontend@bornfight.com"
 }
