--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
         "error",
         {
           "singleQuote": true,
-          "printWidth": 90
+          "printWidth": 150
         }
       ]
     }
@@ -68,20 +68,21 @@
     "yosay": "^2.0.2"
   },
   "devDependencies": {
-    "eslint": "^7.14.0",
-    "eslint-config-prettier": "^6.15.0",
+    "eslint": "^7.15.0",
+    "eslint-config-prettier": "^7.0.0",
     "eslint-config-xo": "^0.33.1",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-prettier": "^3.2.0",
     "figlet": "^1.5.0",
-    "husky": "^4.3.0",
+    "husky": "^4.3.5",
     "jest": "^26.6.3",
-    "lint-staged": "^10.5.2",
-    "prettier": "^2.2.0",
+    "lint-staged": "^10.5.3",
+    "prettier": "^2.2.1",
     "print-message": "^3.0.1",
     "yeoman-assert": "^3.1.1",
     "yeoman-test": "^3.0.0"
   },
   "engines": {
-    "npm": ">= 6.14.2"
+    "node": ">=12.19.0",
+    "npm": ">=6.14.9"
   }
 }
