--- a/generators/app/templates/common/package.json
+++ b/generators/app/templates/common/package.json
@@ -15,12 +15,8 @@
     "esdoc": "./node_modules/.bin/esdoc",
     "format": "prettier --write 'static/**/*.{scss,js}'",
     "lint:scss": "stylelint 'static/**/*.scss'",
+    "prepare": "husky install",
     "webp": "gulp webPImages"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run format"
-    }
   },
   "browserslist": [
     "> 0.5%",
@@ -28,27 +24,27 @@
   ],
   "dependencies": {
     "@bornfight/b-reset": "^1.0.8",
-    "gsap": "^3.7.1",
-    "poly-fluid-sizing": "^1.1.0"
+    "gsap": "^3.8.0",
+    "poly-fluid-sizing": "github:bornfight/poly-fluid-sizing"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.8",
+    "@babel/core": "^7.15.8",
     "@babel/plugin-proposal-class-properties": "^7.14.5",
-    "@babel/plugin-proposal-object-rest-spread": "^7.14.7",
+    "@babel/plugin-proposal-object-rest-spread": "^7.15.6",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.14.8",
-    "@babel/register": "^7.14.5",
+    "@babel/preset-env": "^7.15.8",
+    "@babel/register": "^7.15.3",
     "@namics/stylelint-bem": "^6.3.4",
     "babelify": "^10.0.0",
-    "browser-sync": "^2.27.4",
+    "browser-sync": "^2.27.5",
     "browserify": "^17.0.0",
     "browserify-strip-code": "^1.0.3",
     "del": "^6.0.0",
     "esdoc": "^1.1.0",
     "esdoc-standard-plugin": "^1.0.0",
-    "eslint": "^7.31.0",
+    "eslint": "^8.0.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "esm": "^3.2.25",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
@@ -57,23 +53,24 @@
     "gulp-concat": "^2.6.1",
     "gulp-if": "^3.0.0",
     "gulp-rename": "^2.0.0",
-    "gulp-sass": "^4.1.1",
+    "gulp-sass": "^5.0.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.2",
     "gulp-webp": "^4.0.1",
-    "husky": "^7.0.1",
-    "prettier": "^2.3.2",
+    "husky": "^7.0.2",
+    "prettier": "^2.4.1",
+    "sass": "^1.42.1",
     "stylelint": "^13.13.1",
-    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-prettier": "^9.0.2",
     "stylelint-prettier": "^1.2.0",
-    "stylelint-scss": "^3.20.1",
+    "stylelint-scss": "^3.21.0",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
     "watchify": "^4.0.0"
   },
   "engines": {
-    "node": ">=14.17.0",
-    "npm": ">=7.16.0"
+    "node": ">=14.18.1",
+    "npm": ">=8.0.0"
   },
   "email": "frontend@bornfight.com"
 }
