--- a/generators/app/templates/dotfiles/.babelrc
+++ b/generators/app/templates/dotfiles/.babelrc
@@ -1,7 +1,9 @@
 {
   "presets": [
     "@babel/preset-env",
+    <%_ if (react) { _%>
     "@babel/preset-react"
+    <%_ } _%>
   ],
   "plugins": [
     "@babel/plugin-syntax-dynamic-import",
