--- a/package.json
+++ b/package.json
@@ -1,59 +1,16 @@
 {
-    "name": "b-creative-2-webpack",
-    "version": "1.0.0",
-    "private": true,
-    "description": "Bornfight frontend project template based on webpack, es6 and scss",
-    "license": "(MIT OR Apache-2.0)",
-    "scripts": {
-        "build": "webpack --mode=production",
-        "dev": "webpack --mode development --watch",
-        "format": "prettier --write 'static/**/*.{scss,js}'",
-        "lint:scss": "stylelint 'static/**/*.scss'",
-        "prepare": "cd .. && cd .. && husky install"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.21.3",
-        "@babel/plugin-proposal-class-properties": "^7.18.6",
-        "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
-        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-        "@babel/preset-env": "^7.20.2",
-        "@babel/preset-react": "^7.18.6",
-        "@bornfight/b-accordion": "^1.0.13",
-        "@bornfight/b-reset": "^1.0.8",
-        "@bornfight/b-scroll-lock": "^1.0.7",
-        "@namics/stylelint-bem": "^8.1.0",
-        "babel-loader": "^9.1.2",
-        "browser-sync": "^2.29.1",
-        "browser-sync-webpack-plugin": "^2.3.0",
-        "css-loader": "^6.7.3",
-        "eslint": "^8.37.0",
-        "eslint-config-prettier": "^8.8.0",
-        "eslint-plugin-prettier": "^4.2.1",
-        "eslint-plugin-react": "^7.32.2",
-        "husky": "^8.0.3",
-        "lodash": "^4.17.21",
-        "lottie-web": "^5.9.6",
-        "mini-css-extract-plugin": "^2.7.5",
-        "poly-fluid-sizing": "github:bornfight/poly-fluid-sizing",
-        "postcss": "^8.4.19",
-        "prettier": "^2.8.7",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "sass": "^1.60.0",
-        "sass-loader": "^13.2.2",
-        "style-loader": "^3.3.2",
-        "stylelint": "^14.16.1",
-        "stylelint-config-prettier": "^9.0.5",
-        "stylelint-config-standard-scss": "^6.1.0",
-        "stylelint-prettier": "^3.0.0",
-        "stylelint-scss": "^4.6.0",
-        "webpack": "^5.76.1",
-        "webpack-cli": "^5.0.1",
-        "webpack-remove-empty-scripts": "^1.0.1"
-    },
-    "dependencies": {},
-    "engines": {
-        "node": "16.x",
-        "npm": "8.x"
+    "name": "generator-b-creative",
+    "version": "2.0.0",
+    "description": "",
+    "files": [
+        "generators"
+    ],
+    "keywords": [
+        "yeoman-generator"
+    ],
+    "dependencies": {
+        "mkdirp": "^3.0.0",
+        "print-message": "^3.0.1",
+        "yeoman-generator": "^5.8.0"
     }
 }
