--- a/generators/app/templates/common/package.json
+++ b/generators/app/templates/common/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "b-creative-2",
+    "name": "b-creative",
     "version": "2.0.0",
     "private": true,
     "description": "Bornfight frontend project template based on webpack, es6 and scss",
