--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
+# Vendors
 node_modules
+
+# IDE files
+.idea
+.history
 coverage
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
