--- a/.editorconfig
+++ b/.editorconfig
@@ -1,11 +1,19 @@
+# EditorConfig is awesome: https://EditorConfig.org
 root = true
 
+# GENERAL
 [*]
 indent_style = space
 indent_size = 4
+end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.md]
-trim_trailing_whitespace = false
+# JSON, YML
+[*.{json,yml}]
+indent_size = 2
+
+# DOT FILES
+[.{editorconfig,eslintignore,eslintrc,gitattributes,gitignore,nvmrc,prettierignore,prettierrc}]
+indent_size = 2
