--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   "files": [
     "generators"
   ],
+  "scripts": {
+    "format": "prettier --write 'generators/app/index.js'"
+  },
   "devDependencies": {
     "chalk": "^5.3.0",
     "eslint": "^8.56.0",
