--- a/generators/app/templates/common/package.json
+++ b/generators/app/templates/common/package.json
@@ -1,62 +1,81 @@
 {
-    "name": "b-creative",
-    "version": "2.0.0",
-    "private": true,
-    "description": "Bornfight frontend project template based on webpack, es6 and scss",
-    "license": "(MIT OR Apache-2.0)",
-    "scripts": {
-        "build": "webpack --mode=production",
-        "dev": "webpack --mode development --watch",
-        "format": "prettier --write 'static/**/*.{scss,js}'",
-        "lint:scss": "stylelint 'static/**/*.scss'",
-        "prepare": "cd .. && cd .. && husky install"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.21.3",
-        "@babel/plugin-transform-class-properties": "^7.23.3",
-        "@babel/plugin-transform-object-rest-spread": "^7.23.4",
-        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-        "@babel/preset-env": "^7.20.2",
-        <%_ if (react) { _%>
-        "@babel/preset-react": "^7.18.6",
-        <%_ } _%>
-        "@bornfight/b-accordion": "^1.0.13",
-        "@bornfight/b-reset": "^1.0.8",
-        "@bornfight/b-scroll-lock": "^1.0.7",
-        "@namics/stylelint-bem": "^8.1.0",
-        "babel-loader": "^9.1.2",
-        "browser-sync": "^2.29.1",
-        "browser-sync-webpack-plugin": "^2.3.0",
-        "css-loader": "^6.7.3",
-        "eslint": "^8.37.0",
-        "eslint-config-prettier": "^8.8.0",
-        "eslint-plugin-prettier": "^4.2.1",
-        <%_ if (react) { _%>
-        "eslint-plugin-react": "^7.32.2",
-        <%_ } _%>
-        "husky": "^8.0.3",
-        "mini-css-extract-plugin": "^2.7.5",
-        "postcss": "^8.4.19",
-        "prettier": "^2.8.7",
-        <%_ if (react) { _%>
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        <%_ } _%>
-        "sass": "^1.60.0",
-        "sass-loader": "^13.2.2",
-        "style-loader": "^3.3.2",
-        "stylelint": "^14.16.1",
-        "stylelint-config-prettier": "^9.0.5",
-        "stylelint-config-standard-scss": "^6.1.0",
-        "stylelint-prettier": "^3.0.0",
-        "stylelint-scss": "^4.6.0",
-        "webpack": "^5.76.1",
-        "webpack-cli": "^5.0.1",
-        "webpack-remove-empty-scripts": "^1.0.1"
-    },
-    "dependencies": {},
-    "engines": {
-        "node": "16.x",
-        "npm": "8.x"
-    }
+  "name": "b-creative",
+  "version": "2.0.0",
+  "private": true,
+  "description": "BORNFIGHT STUDIO® project template based on webpack, es6 and scss",
+  "repository": {
+    "type": "git",
+    "url": ""
+  },
+  "license": "(MIT OR Apache-2.0)",
+  "author": {
+    "name": "BORNFIGHT STUDIO®",
+    "email": "hello@bornfight.studio",
+    "url": "https://www.bornfight.studio"
+  },
+  "scripts": {
+    "build": "prettier --write 'static/**/*.{scss,js}' && webpack --mode=production",
+    "dev": "webpack --mode development --watch",
+    "format": "prettier --write 'static/**/*.{scss,js}'",
+    "lint:scss": "stylelint 'static/**/*.scss'",
+    "prepare": "cd .. && cd .. && husky install"
+  },
+  "browserslist": [
+    "defaults"
+  ],
+  "dependencies": {
+    "@bornfight/b-accordion": "^1.0.15",
+    "@bornfight/b-reset": "^1.0.8",
+    "@bornfight/b-scroll-lock": "^1.0.7",
+    "fontfaceobserver-es": "^3.3.3",
+    "gsap": "^3.12.5",
+    "instant.page": "^5.2.0",
+    "slim-select": "^2.8.1",
+    "swiper": "^11.0.6",
+    "vanilla-lazyload": "^17.8.8"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.23.9",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-class-properties": "^7.23.3",
+    "@babel/plugin-transform-object-rest-spread": "^7.23.4",
+    "@babel/preset-env": "^7.23.9",
+    <%_ if (react) { _%>
+    "@babel/preset-react": "^7.23.3",
+    <%_ } _%>
+    "@namics/stylelint-bem": "^10.0.0",
+    "babel-loader": "^9.1.3",
+    "browser-sync": "^3.0.2",
+    "browser-sync-webpack-plugin": "^2.3.0",
+    "css-loader": "^6.10.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    <%_ if (react) { _%>
+    "eslint-plugin-react": "^7.33.2",
+    <%_ } _%>
+    "husky": "^9.0.11",
+    "mini-css-extract-plugin": "^2.8.0",
+    "postcss": "^8.4.35",
+    "prettier": "^3.2.5",
+    <%_ if (react) { _%>
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    <%_ } _%>
+    "sass": "^1.71.0",
+    "sass-loader": "^14.1.1",
+    "style-loader": "^3.3.4",
+    "stylelint": "^16.2.1",
+    "stylelint-config-prettier": "^9.0.5",
+    "stylelint-config-standard-scss": "^13.0.0",
+    "stylelint-prettier": "^5.0.0",
+    "stylelint-scss": "^6.1.0",
+    "webpack": "^5.90.3",
+    "webpack-cli": "^5.1.4",
+    "webpack-remove-empty-scripts": "^1.0.4"
+  },
+  "engines": {
+    "node": "20.x",
+    "npm": "10.x"
+  }
 }
