--- a/generators/app/templates/dotfiles/.babelrc.json
+++ b/generators/app/templates/dotfiles/.babelrc.json
@@ -1,9 +1,7 @@
 {
   "presets": [
-    "@babel/preset-env",
-    <%_ if (react) { _%>
-    "@babel/preset-react"
-    <%_ } _%>
+    "@babel/preset-env"<%_ if (react) { _%>,
+    "@babel/preset-react"<%_ } _%>
   ],
   "plugins": [
     "@babel/plugin-syntax-dynamic-import",
