--- a/generators/app/templates/dotfiles/.editorconfig
+++ b/generators/app/templates/dotfiles/.editorconfig
@@ -1,7 +1,7 @@
 # EditorConfig is awesome: https://EditorConfig.org
 root = true
 
-# HTML/PHP/Liquid
+# HTML, Liquid
 [*.{html,liquid}]
 indent_style = space
 indent_size = 4
