--- a/generators/app/templates/dotfiles/.eslintrc.json
+++ b/generators/app/templates/dotfiles/.eslintrc.json
@@ -1,26 +1,58 @@
 {
-    "env": {
-        "browser": true,
-        "commonjs": true,
-        "es6": true,
-        "node": true
-    },
-    "extends": ["eslint:recommended", "plugin:prettier/recommended", "plugin:react/recommended"],
-    "parserOptions": {
-        "sourceType": "module",
-        "ecmaVersion": 2020
-    },
-    "plugins": ["prettier"],
-    "rules": {
-        "prettier/prettier": ["error"],
-        <%_ if (react) { _%>
-        "react/react-in-jsx-scope": "off",
-        "react/prop-types": "off",
-        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
-        <%_ } _%>
-    },
-    "globals":{
-        "frontend_rest_object": true,
-        "wp": true
-    }
+  "env": {
+    "browser": true,
+    "commonjs": true,
+    "es6": true,
+    "node": true
+  },
+  "extends": [
+    "eslint:recommended",
+    "plugin:prettier/recommended",
+    <%_ if (react) { _%>
+    "plugin:react/recommended",<%_ } _%>
+    "prettier"
+  ],
+  "globals": {
+    "document": true,
+    "window": true,
+    "frontend_rest_object": true,
+    "wp": true
+  },
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "plugins": [
+    "prettier"
+  ],
+  "rules": {
+    "babel/no-invalid-this": 0,
+    "import/no-anonymous-default-export": 0,
+    "import/no-unresolved": [
+      "error",
+      {
+        "ignore": [
+          "^jquery"
+        ]
+      }
+    ],
+    "no-alert": 0,
+    "no-console": 0,
+    "no-new": 0,
+    "node/shebang": 0,
+    "prettier/prettier": [
+      "error"
+    ]<%_ if (react) { _%>,
+    "react/react-in-jsx-scope": "off",
+    "react/prop-types": "off",
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [
+          ".js",
+          ".jsx"
+        ]
+      }
+    ]<%_ } _%>
+  }
 }
