--- a/generators/app/templates/dotfiles/.gitignore
+++ b/generators/app/templates/dotfiles/.gitignore
@@ -1,21 +1,19 @@
 # Created by https://www.gitignore.io
 
-### WordPress ###
+# WordPress
 *.log
 #.htaccess
 sitemap.xml
 sitemap.xml.gz
 #wp-config.php
 
-static/node_modules/
-
-### Intellij ###
+# Intellij
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm
-
 *.iml
 
-## Directory-based project format:
+# Directory-based project format
 .idea/
+.history/
 # if you remove the above rule, at least ignore the following:
 
 # User-specific stuff:
@@ -37,11 +35,11 @@ static/node_modules/
 # Mongo Explorer plugin:
 # .idea/mongoSettings.xml
 
-## File-based project format:
+# File-based project format
 *.ipr
 *.iws
 
-## Plugin-specific files:
+# Plugin-specific files
 
 # IntelliJ
 /out/
@@ -57,8 +55,7 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 
-
-### PhpStorm ###
+# PhpStorm
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm
 
 # User-specific stuff:
@@ -77,10 +74,16 @@ crashlytics-build.properties
 # .idea/gradle.xml
 # .idea/libraries
 
-
-# DS_Store
+# OS generated files
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
+# Vendors
 .sass-cache/*
 node_modules/*
 bower_components/*
