responsive image/viedeo fixes

--- a/generators/app/templates/dotfiles/.stylelintignore
+++ b/generators/app/templates/dotfiles/.stylelintignore
@@ -1,5 +1,5 @@
 dist/
 node_modules/
 bower_components/
-src/styles/settings/**/*.scss
-src/styles/tools/**/*.scss
+static/scss/settings/**/*.scss
+static/scss/tools/**/*.scss
