--- a/generators/app/templates/common/package.json
+++ b/generators/app/templates/common/package.json
@@ -30,46 +30,40 @@
     "fontfaceobserver-es": "^3.3.3",
     "gsap": "^3.12.5",
     "instant.page": "^5.2.0",
-    "slim-select": "^2.8.1",
-    "swiper": "^11.0.6",
-    "vanilla-lazyload": "^17.8.8"
+    "slim-select": "^2.8.2",
+    "swiper": "^11.1.4",
+    "vanilla-lazyload": "^19.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.9",
+    "@babel/core": "^7.24.7",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-class-properties": "^7.23.3",
-    "@babel/plugin-transform-object-rest-spread": "^7.23.4",
-    "@babel/preset-env": "^7.23.9",
-    <%_ if (react) { _%>
-    "@babel/preset-react": "^7.23.3",
-    <%_ } _%>
+    "@babel/plugin-transform-class-properties": "^7.24.7",
+    "@babel/plugin-transform-object-rest-spread": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.4.0",
     "@namics/stylelint-bem": "^10.0.0",
+    "ajv": "^8.16.0",
     "babel-loader": "^9.1.3",
     "browser-sync": "^3.0.2",
     "browser-sync-v3-webpack-plugin": "^0.1.0",
-    "css-loader": "^6.10.0",
-    "eslint": "^8.56.0",
+    "css-loader": "^7.1.2",
+    "eslint": "^9.4.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    <%_ if (react) { _%>
-    "eslint-plugin-react": "^7.33.2",
-    <%_ } _%>
+    "globals": "^15.4.0",
     "husky": "^9.0.11",
-    "mini-css-extract-plugin": "^2.8.0",
-    "postcss": "^8.4.35",
-    "prettier": "^3.2.5",
-    <%_ if (react) { _%>
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    <%_ } _%>
-    "sass": "^1.71.1",
-    "sass-loader": "^14.1.1",
-    "style-loader": "^3.3.4",
-    "stylelint": "^16.2.1",
-    "stylelint-config-standard-scss": "^13.0.0",
+    "mini-css-extract-plugin": "^2.9.0",
+    "postcss": "^8.4.38",
+    "prettier": "^3.3.2",
+    "sass": "^1.77.5",
+    "sass-loader": "^14.2.1",
+    "style-loader": "^4.0.0",
+    "stylelint": "^16.6.1",
+    "stylelint-config-standard-scss": "^13.1.0",
     "stylelint-prettier": "^5.0.0",
-    "stylelint-scss": "^6.1.0",
-    "webpack": "^5.90.3",
+    "stylelint-scss": "^6.3.1",
+    "webpack": "^5.92.0",
     "webpack-cli": "^5.1.4",
     "webpack-remove-empty-scripts": "^1.0.4"
   },
