--- a/package.json
+++ b/package.json
@@ -29,14 +29,17 @@
     "format": "prettier --write 'generators/app/index.js'"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.4.0",
     "chalk": "^5.3.0",
-    "eslint": "^8.56.0",
+    "eslint": "^9.4.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "globals": "^15.4.0",
     "mkdirp": "^3.0.1",
-    "prettier": "^3.2.5",
+    "prettier": "^3.3.2",
     "print-message": "^3.0.1",
-    "yeoman-generator": "^7.1.1"
+    "yeoman-generator": "^7.2.0"
   },
   "engines": {
     "node": "20.x",
